--- a/01TUT/package.json
+++ b/01TUT/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "01tut",
+  "name": "06tut",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "Express Tutorials",
+  "main": "serverex.js",
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server"
+    "start": "node serverex",
+    "dev": "nodemon serverex"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
